--- a/templates/empleados/edit.html
+++ b/templates/empleados/edit.html
@@ -1,27 +1,55 @@
-Aqui editamos
+{% include 'header.html' %}
 {% for empleado in empleados %}
 
+<br>
 <form method="post" action="/update" enctype="multipart/form-data">
 
-    Id:
-    <input type="text" value="{{ empleado[0] }}" name="txtId" id="txtId">
-    <br>
+    <div class="card">
+        <div class="card-header">
+            EDITAR EMPLEADO
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Datos del empleado</h5>
+            <p class="card-text">
 
-    Nombre:
-    <input type="text" value="{{ empleado[1] }}" name="txtNombre" id="txtnombre">
-    <br>
+                <div class="form-group">
+                    <label for="txtId">ID:</label>
+                    <input id="txtId" class="form-control" value="{{ empleado[0] }}" type="text" name="txtId">
+                </div>
 
-    Correo:
-    <input type="text" value="{{ empleado[2] }}" name="txtCorreo" id="txtcorreo">
-    <br>
+                <div class="form-group">
+                    <label for="txtNombre">Nombre:</label>
+                    <input id="txtNombre" class="form-control" value="{{ empleado[1] }}"  type="text" name="txtNombre">
+                </div>
 
-    Foto:
-    {{empleados[3]}}
-    <input type="file" value="" name="txtFoto" id="txtFoto">
-    <br>
-    
-    <input type="submit" value="Editar">
+                <div class="form-group">
+                    <label for="txtCorreo">Correo:</label>
+                    <input id="txtCorreo" class="form-control" value="{{ empleado[2] }}" type="text" name="txtCorreo">
+                </div>            
+                
+                <div class="form-group">
+                    Foto:
+                    <br>
+                    <!-- instruucion url_for accede a un metodo que nos devuelve la ruta -->
+                    <img class="img-thumbnail" width="100" src="{{url_for('uploads',nombreFoto = empleado[3] )}}" alt="">
+                </div>
+                
+                <div class="form-group">
+                    <input type="file" value="" name="txtFoto" id="txtFoto">
+                </div>
+
+                 <div class="form-group">
+                    <input type="submit" class="btn btn-success" value="Editar">
+                    <a href="{{url_for('index')}}" class="btn btn-primary">Regresar</a>
+                </div>
+                
+            </p>
+        </div>
+    </div>
+
+  
 
 </form>
 
 {% endfor %}
+{% include 'footer.html' %}
